# libgram

./: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.in  README  config.status  configure  configure.ac  libgram.h  libtool  test.cpp
Release/: makefile  sources.mk  subdir.mk
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libgram/: emissionprovider.h  query.h  solver.h
libgram/providers/: simpleprovider.h
src/: Makefile  Makefile.am  Makefile.in  libgram.h
src/libgram/: emissionprovider.h  faststring.h  query.h  solver.h
src/libgram/providers/: simpleprovider.h
