#lib_LTLIBRARIES = libgram.la
#libgram_la_SOURCES = ???.cpp
#libgram_la_LDFLAGS = -version-info 0:0:0
AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

libgramdir = $(includedir)/libgram
libgramprovidersdir = $(includedir)/libgram/providers

include_HEADERS = libgram.h
libgram_HEADERS = libgram/solver.h libgram/query.h libgram/emissionprovider.h
libgramproviders_HEADERS = libgram/providers/simpleprovider.h
